syntax = "proto3";

// Note: largely inspired by https://github.com/prysmaticlabs/prysm/tree/develop/proto/eth/v1

package xatu.eth.v1;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/eth/v1";

import "google/protobuf/descriptor.proto";
import "pkg/proto/eth/v1/checkpoint.proto";

message Attestation {
  string aggregation_bits = 1 [json_name="aggregation_bits"];

  string signature = 2;

  AttestationData data = 3;
}

message AttestationData {
  uint64 slot = 1;

  uint64 index = 2;

  string beacon_block_root = 3 [json_name="beacon_block_root"];

  Checkpoint source = 4;

  Checkpoint target = 5;
}

message AggregateAttestationAndProof {
  uint64 aggregator_index = 1 [json_name="aggregator_index"];

  Attestation aggregate = 3;

  string selection_proof = 2 [json_name="selection_proof"];
}

message SignedAggregateAttestationAndProof {
  AggregateAttestationAndProof message = 1;

  string signature = 2;
}

